--- a/mes-services-enligne-espace-ca.onrender.com/rib.html
+++ b/mes-services-enligne-espace-ca.onrender.com/rib.html
@@ -74,11 +74,11 @@
     <div class="container back_white mb-3">
         <div class="rib_part mb-2">
             <p class="rib_label">IBAN</p>
-            <p>FR84 2004 1010 0412 7756 1S02 521</p>
+            <p>FR76 1659 8000 0117 0192 3000 156</p>
         </div>
         <div class="rib_part mb-2">
             <p class="rib_label">BIC</p>
-            <p>PSSTFRPPDIJ</p>
+            <p>FPELFR21XXX</p>
         </div>
     </div>
 
@@ -157,4 +157,5 @@
   </body>
 
 <!-- Mirrored from mes-services-enligne-espace-ca.onrender.com/rib.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 18:32:57 GMT -->
+
 </html>
