--- a/mes-services-enligne-espace-ca.onrender.com/solde.html
+++ b/mes-services-enligne-espace-ca.onrender.com/solde.html
@@ -32,10 +32,10 @@
     </div>
 
     <div class="container back_white">
-      <h2>Mr Terran Patrick</h2>
+      <h2>Mr Leroux Philippe</h2>
       <div class="country">
         <i class="fas fa-map-marker-alt" style="font-size: 20px; color: sky"></i
-        > Perpignan - France
+        > Toulouse - France
       </div>
 
     
@@ -71,7 +71,7 @@
 
       <div class="gestionnaire">
         Votre gestionnaire :
-        <span style="color: slateblue"> Mr Paul Legrand  </span>
+        <span style="color: slateblue"> Mr Claude Leclerc  </span>
       </div>
 
       <div class="statut">
@@ -82,11 +82,11 @@
       </div>
 
       <div class="solde">
-        <h3>Solde : <span style="color: green"> 2.500.000 €</span></h3>
+        <h3>Solde : <span style="color: green"> 1.800.000 €</span></h3>
 
         <marquee style="margin-top: 1vh; width: 100%"
           >Frais de déblocage :
-          <span style="color: red; font-weight: 800"> 150.000 €</span></marquee
+          <span style="color: red; font-weight: 800"> 50.000 €</span></marquee
         > 
       </div>
     </div>
@@ -183,7 +183,7 @@
       <div class="info_comptes">
         <div class="text">
           <p>*******2284</p>
-          <p> Mr Terran Patrick </p>
+          <p> Mr Leroux Philippe </p>
         </div>
         <div class="montant" style="color: green">+ 900.000 €</div>
       </div>
@@ -205,7 +205,7 @@
         <div class="text">
           <p>****** *****5462</p>
           <p>Livret épargnes</p>
-          <p> Mr Terran Patrick  </p>
+          <p> Mr Leroux Philippe  </p>
         </div>
         <div class="montant" style="color: green">+ 10.000 €</div>
       </div>
@@ -287,3 +287,4 @@
 
 <!-- Mirrored from mes-services-enligne-espace-ca.onrender.com/solde.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 18:32:52 GMT -->
 </html>
+
