--- a/mes-services-enligne-espace-ca.onrender.com/cartes.html
+++ b/mes-services-enligne-espace-ca.onrender.com/cartes.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="name_logo">
-          <div class="card_name"> Terran Patrick  </div>
+          <div class="card_name"> Leroux Philippe  </div>
           <div class="logo_card">
             <img src="img/visa.png" alt="logo_carte" />
           </div>
@@ -191,3 +191,4 @@
 
 <!-- Mirrored from mes-services-enligne-espace-ca.onrender.com/cartes.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 18:32:57 GMT -->
 </html>
+
