--- a/mes-services-enligne-espace-ca.onrender.com/solde.html
+++ b/mes-services-enligne-espace-ca.onrender.com/solde.html
@@ -35,7 +35,8 @@
       <h2>Mr Leroux Philippe</h2>
       <div class="country">
         <i class="fas fa-map-marker-alt" style="font-size: 20px; color: sky"></i
-        > Toulouse - France
+        > Rue John-Fitzgerald Kennedy
+31000 Toulouse - France
       </div>
 
     
@@ -287,4 +288,5 @@
 
 <!-- Mirrored from mes-services-enligne-espace-ca.onrender.com/solde.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 26 Sep 2025 18:32:52 GMT -->
 </html>
+
 
